--- a/pagina1.html
+++ b/pagina1.html
@@ -109,16 +109,17 @@
 </head>
 <body class="bg-gray-900 text-gray-100">
 
-    <!-- Navigatiebalk container - Dit is nu de primaire, verticale zijbalk -->
+    <!-- Navigatiebalk container - Dit is de primaire, verticale zijbalk -->
     <nav id="main-nav" class="bg-gray-800">
         <!-- Header sectie van de nav (logo en desktop toggle knop) -->
         <div class="px-4 py-3 md:py-6 flex items-center justify-between md:flex-col md:items-start md:space-y-4 w-full">
-            <!-- Logo of merknaam -->
+            <!-- Logo of merknaam (nu een huisje) -->
+            <!-- START Verandering: Huis-icoon en tekst "Start" -->
             <a href="index.html" class="flex items-center space-x-2 text-2xl font-bold text-white transition-all-500ms hover:text-gray-300 md:self-start">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM12 4C16.4183 4 20 7.58172 20 12C20 16.4183 16.4183 20 12 20C7.58172 20 4 16.4183 4 12C4 7.58172 7.58172 4 12 4ZM12 6V18M18 12H6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M3 12l9-9 9 9M5 10v10a1 1 0 001 1h3m10-11l2 2m-2 2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-                <span class="nav-text">navigatie</span>
+                <span class="nav-text">Start</span>
             </a>
 
             <!-- Desktop navigatie toggle knop -->
@@ -135,19 +136,19 @@
         <div class="flex flex-col px-4 py-2 md:flex-grow w-full">
             <a href="pagina1.html" class="nav-link flex items-center space-x-3 text-gray-300 hover:text-green-400 py-2 border-b-2 border-transparent hover:border-green-400 transition-all-500ms rounded-md mx-0 my-1">
                 <svg class="w-6 h-6 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2 2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
-                <span class="nav-text">pagina1</span>
+                <span class="nav-text">Pagina 1</span>
             </a>
             <a href="pagina2.html" class="nav-link flex items-center space-x-3 text-gray-300 hover:text-green-400 py-2 border-b-2 border-transparent hover:border-green-400 transition-all-500ms rounded-md mx-0 my-1">
                 <svg class="w-6 h-6 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                <span class="nav-text">pagina2</span>
+                <span class="nav-text">Pagina 2</span>
             </a>
             <a href="pagina3.html" class="nav-link flex items-center space-x-3 text-gray-300 hover:text-green-400 py-2 border-b-2 border-transparent hover:border-green-400 transition-all-500ms rounded-md mx-0 my-1">
                 <svg class="w-6 h-6 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-1.289-8.455-3.245L1.655 9.467A20.041 20.041 0 012.5 6C5 3.5 9 2 12 2s7 1.5 9.5 4c.845 2.115 1.258 4.394 1.29 6.702l-1.29 1.553z"></path></svg>
-                <span class="nav-text">pagina3</span>
+                <span class="nav-text">Pagina 3</span>
             </a>
             <a href="pagina4.html" class="nav-link flex items-center space-x-3 text-gray-300 hover:text-green-400 py-2 border-b-2 border-transparent hover:border-green-400 transition-all-500ms rounded-md mx-0 my-1">
                 <svg class="w-6 h-6 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-9 13V3"></path></svg>
-                <span class="nav-text">pagina4</span>
+                <span class="nav-text">Blackjack</span>
             </a>
         </div>
     </nav>
