--- a/pagina4.html
+++ b/pagina4.html
@@ -309,15 +309,15 @@
             </a>
             <a href="pagina2.html" class="nav-link flex items-center space-x-3 text-gray-300 hover:text-green-400 py-2 border-b-2 border-transparent hover:border-green-400 transition-all-500ms rounded-md mx-0 my-1">
                 <svg class="w-6 h-6 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                <span class="nav-text">pagina 2</span>
+                <span class="nav-text">Pagina 2</span>
             </a>
             <a href="pagina3.html" class="nav-link flex items-center space-x-3 text-gray-300 hover:text-green-400 py-2 border-b-2 border-transparent hover:border-green-400 transition-all-500ms rounded-md mx-0 my-1">
                 <svg class="w-6 h-6 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-1.289-8.455-3.245L1.655 9.467A20.041 20.041 0 012.5 6C5 3.5 9 2 12 2s7 1.5 9.5 4c.845 2.115 1.258 4.394 1.29 6.702l-1.29 1.553z"></path></svg>
-                <span class="nav-text">pagina 3</span>
+                <span class="nav-text">Pagina 3</span>
             </a>
             <a href="pagina4.html" class="nav-link flex items-center space-x-3 text-gray-300 hover:text-green-400 py-2 border-b-2 border-transparent hover:border-green-400 transition-all-500ms rounded-md mx-0 my-1">
                 <svg class="w-6 h-6 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-9 13V3"></path></svg>
-                <span class="nav-text">blackjack</span>
+                <span class="nav-text">Blackjack</span>
             </a>
         </div>
     </nav>
